--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="py-4 border-b mt-10">
     <app-sidebar></app-sidebar>
   </div>
-  <main class="w-full min-h-screen py-6">
+  <main class="w-full py-6">
     <router-outlet></router-outlet>
   </main>
 </div>
