--- a/src/app/widgets/counterparty/counterparty.component.html
+++ b/src/app/widgets/counterparty/counterparty.component.html
@@ -5,8 +5,11 @@
     [externalFilter]="false"
     [columnVisibility]="true"
     (gridReady)="onGridReady($event)"
+    (filterChanged)="onFilterChangedHandler($event)"
 > 
     <button table-actions nz-button nzType="primary" (click)="addNewCounterparty()">
         Add Counterparty
     </button>
 </app-table-renderer>
+ 
+ 
