--- a/src/app/widgets/counterparty/counterparty.component.html
+++ b/src/app/widgets/counterparty/counterparty.component.html
@@ -1,12 +1,17 @@
 <app-table-renderer
     [columnDef]="counterPartyColumns"
     [rowData]="counterPartyDatas"
-    [pagination]="false"
+    [pagination]="true"
+    [serverSidePagination]="true"
+    [totalRows]="totalRows"
+    [currentPage]="currentPage"
+    [pageSize]="pageSize"
     [externalFilter]="false"
     [columnVisibility]="true"
     (gridReady)="onGridReady($event)"
     (filterChanged)="onFilterChangedHandler($event)"
-> 
+    (paginationChanged)="onPaginationChanged($event)"
+>
     <button table-actions nz-button nzType="primary" (click)="addNewCounterparty()">
         Add Counterparty
     </button>
